<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>hb_msgs</name>
	<version>1.0.0</version>
	<description>heart beat message format for sensor nodes</description>

	<maintainer email="2563225049@qq.com">anoki</maintainer>
	<license>Apache License 2.0</license>
	<buildtool_depend>ament_cmake</buildtool_depend>

	<depend>rosidl_default_generator</depend>
	<depend>builtin_interfaces</depend>
	<member_of_group>rosidl_interface_packages</member_of_group>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>